# PacMan

./: CMakeLists.txt  README.md  TODO
dep/: GUI.hpp  audio.hpp  ghost.hpp  map.hpp  menu.hpp  pack.hpp  pack_E.hpp  world.hpp
maps/: map1.txt  map2.txt  map3.txt  map4.txt
src/: GUI.cpp  audio.cpp  ghost.cpp  main.cpp  map.cpp  menu.cpp  pack.cpp  pack_E.cpp  world.cpp
texture/: ghost.png~  mapTile.png~  menu.png~  pac-man-igra-fon.jpg~  pacman.png~  point.png~  status_bar.png~
